app-test/app1-deployment.yml
# app1-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app1
  namespace: hello-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app1
  template:
    metadata:
      labels:
        app: app1
    spec:
      containers:
      - name: app1
        image: python:3.9-alpine
        command: ["python", "-m", "http.server", "8000"]
        ports:
        - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: app1-service
  namespace: hello-app
spec:
  selector:
    app: app1
  ports:
    - port: 8000
      targetPort: 8000
      protocol: TCP
  type: ClusterIP
