app-test/app2-deployment.yml
# app2-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app2
  namespace: hello-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app2
  template:
    metadata:
      labels:
        app: app2
    spec:
      containers:
      - name: app2
        image: python:3.9-alpine
        command: ["python", "-m", "http.server", "8000"]
        ports:
        - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: app2-service
  namespace: hello-app
spec:
  selector:
    app: app2
  ports:
    - port: 8000
      targetPort: 8000
      protocol: TCP
  type: ClusterIP
